--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "add-free-course-udemy",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "add automatically free course in your file on your udemy account",
   "license": "MIT",
   "repository": {
@@ -10,7 +10,7 @@
   "author": {
     "name": "Nacim Goura",
     "email": "nacim.goura.dev@gmail.com",
-    "url": "nacimgoura.xyz"
+    "url": "https://nacimgoura.github.io/"
   },
   "engines": {
     "node": ">=4"
@@ -33,17 +33,17 @@
     "selenium"
   ],
   "dependencies": {
-    "chalk": "^2.3.0",
-    "inquirer": "^4.0.1",
+    "chalk": "^2.3.2",
+    "inquirer": "^5.2.0",
     "linebyline": "^1.3.0",
     "lodash.includes": "^4.3.0",
     "meow": "^4.0.0",
-    "selenium-standalone": "^6.12.0",
-    "wdio": "^1.0.3"
+    "selenium-standalone": "^6.13.0",
+    "wdio": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "^4.13.1",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0"
+    "eslint-plugin-import": "^2.10.0"
   }
 }
